# sieve-parser

./: .editorconfig  .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  make-helpers
.devcontainer/: .env.sample  Dockerfile  README.md  container-entrypoint.sh  devcontainer.json
.devcontainer/container-entrypoint.d/: install-rust-components.sh
.devcontainer/files/: bashrc
.github/: FUNDING.yml
.github/workflows/: release.yaml  test.yml
examples/: capabilities.rs
resources/assets/: action-fileinto-copy.sieve  action-fileinto-flags.sieve  action-fileinto.sieve  action-flag.sieve  action-notify.sieve  action-redirect.sieve  action-reject-and-ereject.sieve  action-vacation-multi-line-string.sieve  action-vacation.sieve  comment.sieve  control-if-allof.sieve  control-if-anyof.sieve  control-if-elsif-else.sieve  control-if-nesting.sieve  control-if-not.sieve  multi-line-string.sieve  test-exists.sieve  test-flag.sieve  test-header-regex.sieve  test-header.sieve  test-size.sieve
src/: grammar.pest
src/grammar/: parser.rs
src/grammar/ast/: comment.rs  comparators.rs  literal.rs  mod.rs  node.rs  quantifiers.rs
src/grammar/ast/action/: discard.rs  fileinto.rs  flag.rs  keep.rs  mod.rs  notify.rs  redirect.rs  reject.rs  vacation.rs
src/grammar/ast/control/: condition.rs  mod.rs  require.rs  stop.rs
src/grammar/ast/test/: address.rs  allof.rs  anyof.rs  boolean.rs  envelope.rs  exists.rs  flag.rs  header.rs  mod.rs  not.rs  notify.rs  size.rs
