[package]
name = "sieve-parser"
description = "Parsing the Sieve language and exporting an abstract representation"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["sieve"]
categories = ["email", "parsing"]
authors = ["Vincent Lauria <vincent@lauria.ch>"]
homepage = "https://github.com/plivox/sieve-parser"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "sieve-parser"
doc = false

[dependencies]
atty = "0.2.14"
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
pest = { version = "2.7.4", features = ["pretty-print"] }
pest_derive = "2.7.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
pest-test = "0.1.6"
