[package]
name = "sieve-parser"
description = "Parsing the Sieve language and exporting an abstract representation"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["sieve"]
categories = ["email", "parsing"]
authors = ["Vincent Lauria <vincent@lauria.ch>"]
homepage = "https://github.com/plivox/sieve-parser"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "sieve-parser"
doc = false
required-features = ["cli"]

[features]
cli = ["dep:atty", "dep:clap", "dep:serde_json"]

[dependencies]
atty = { version = "0.2.14", optional = true }
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"], optional = true }
pest = { version = "2.7.4", features = ["pretty-print"] }
pest_derive = "2.7.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }

[dev-dependencies]
pest-test = "0.1.6"
